--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,37 @@
-<nz-footer>
-    Footer
-</nz-footer>
+
+<footer class="bg-body-tertiary text-center text-lg-start">
+    <div class="container p-4">
+        <div class="row">
+            <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+                <h5 class="text-uppercase">About Our Company</h5>
+
+                <p>
+                    At Productos Colombianos , we're dedicated to bringing you innovative solutions for everyday life. Our mission is to make your life easier, one product at a time. Explore our range of products and discover how we're shaping the future.
+                </p>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Get In Touch</h5>
+
+                <p>
+                    Have a question or feedback for us? We're here to help! Contact our friendly team for support and assistance. Your satisfaction is our top priority.
+                </p>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Join Our Community</h5>
+
+                <p>
+                    Join the Productos Colombianos community today! Connect with us on social media for the latest updates, exclusive offers, and behind-the-scenes content. Let's build something great together.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="copyRight text-center p-3">
+        © 2024 Copyright:
+        <a class="text-body" href="#">productosColombianos.com</a>
+    </div>
+</footer>
+
+
