Realizando sideBar y content del  layout

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -30,7 +30,7 @@
 
     <div class="copyRight text-center p-3">
         © 2024 Copyright:
-        <a class="text-body" href="#">productosColombianos.com</a>
+        <a class="text-body" href="#">Julian David Camacho Erazo - jdacamacho</a>
     </div>
 </footer>
 
