--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,1 @@
-
-<nz-header class="site-header">
-    Header
-</nz-header>
+<nz-page-header class="site-page-header" nzTitle="Products Application" nzSubtitle="The best products in the wordl!"></nz-page-header>
