--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,14 +1,20 @@
 <nz-layout>
-    <nz-header> 
-        <app-header></app-header> 
-    </nz-header>
-    <nz-layout>
-      <nz-sider>
-        <app-side-bar></app-side-bar>
-      </nz-sider>
-      <nz-content>Content</nz-content>
-    </nz-layout>
-    <nz-footer>
-        <app-footer></app-footer>
-    </nz-footer>
+  <app-header></app-header>
+  <div class="breadCrumb">
+    <nz-breadcrumb>
+      <nz-breadcrumb-item></nz-breadcrumb-item>
+      <nz-breadcrumb-item>Home</nz-breadcrumb-item>
+    </nz-breadcrumb>
+  </div>
+  <nz-layout>
+    <nz-sider>
+      ASDAS
+    </nz-sider>
+    <nz-content class="content-main">
+      
+    </nz-content>
   </nz-layout>
+  <app-footer></app-footer>
+</nz-layout>
+
+
