--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -1,15 +1,22 @@
-
-<div class="logo"></div>
-<ul nz-menu  nzMode="inline">
+<ul nz-menu  nzMode="inline" class="side-bar">
     <li nz-menu-item>
         <span nz-icon nzType="home" nzTheme="outline"></span>
         <span>Home</span>
     </li>
     <li nz-submenu nzTitle="Products" nzIcon="shop">
         <ul>
-            <li nz-menu-item>Tom</li>
-            <li nz-menu-item>Bill</li>
-            <li nz-menu-item>Alex</li>
+            <li nz-menu-item>Take a look</li>
+            <li nz-menu-item>Register</li>
         </ul>
+    </li>
+    <li nz-submenu nzTitle="Sellers" nzIcon="user">
+        <ul>
+            <li nz-menu-item>Manage</li>
+            <li nz-menu-item>Register</li>
+        </ul>
+    </li>
+    <li nz-menu-item>
+        <span nz-icon nzType="user" nzTheme="outline"></span>
+        <span>Developer</span>
     </li>
 </ul>
