--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -1,21 +1,5 @@
 .content-main{
-    background-color: white;
+  background-color: white;
+  min-height: 270px;
+  max-height: 400px;
 }
-
-.search-box {
-    padding: 8px;
-  }
-
-  .search-box input {
-    width: 188px;
-    margin-bottom: 8px;
-    display: block;
-  }
-
-  .search-box button {
-    width: 90px;
-  }
-
-  .search-button {
-    margin-right: 8px;
-  }
