--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -1,22 +1,21 @@
-<ul nz-menu  nzMode="inline" class="side-bar">
-    <li nz-menu-item>
+<ul class="nav flex-column">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">
         <span nz-icon nzType="home" nzTheme="outline"></span>
         <span>Home</span>
+      </a>
     </li>
-    <li nz-submenu nzTitle="Products" nzIcon="shop">
-        <ul>
-            <li nz-menu-item>Take a look</li>
-            <li nz-menu-item>Register</li>
-        </ul>
+    <li class="nav-item">
+      <a class="nav-link" href="#">
+        <span nz-icon nzType="shop" nzTheme="outline"></span>
+        <span>products</span>
+      </a>
     </li>
-    <li nz-submenu nzTitle="Sellers" nzIcon="user">
-        <ul>
-            <li nz-menu-item>Manage</li>
-            <li nz-menu-item>Register</li>
-        </ul>
-    </li>
-    <li nz-menu-item>
-        <span nz-icon nzType="user" nzTheme="outline"></span>
-        <span>Developer</span>
+    <li class="nav-item">
+      <a class="nav-link" href="#">
+        <span nz-icon nzType="home" nzTheme="outline"></span>
+        <span>Sellers</span>
+      </a>
     </li>
 </ul>
+
