--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,9 @@
 
-<footer class="bg-body-tertiary text-center text-lg-start">
+<footer class="text-center text-lg-start">
     <div class="container p-4">
         <div class="row">
             <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
-                <h5 class="text-uppercase">About Our Company</h5>
+                <h5 class="title">ABOUT OUR COMPANY</h5>
 
                 <p>
                     At Productos Colombianos , we're dedicated to bringing you innovative solutions for everyday life. Our mission is to make your life easier, one product at a time. Explore our range of products and discover how we're shaping the future.
@@ -11,7 +11,7 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
-                <h5 class="text-uppercase">Get In Touch</h5>
+                <h5 class="title">GET IN TOUCH</h5>
 
                 <p>
                     Have a question or feedback for us? We're here to help! Contact our friendly team for support and assistance. Your satisfaction is our top priority.
@@ -19,7 +19,7 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
-                <h5 class="text-uppercase">Join Our Community</h5>
+                <h5 class="title">JOIN OUR COMMUNITY</h5>
 
                 <p>
                     Join the Productos Colombianos community today! Connect with us on social media for the latest updates, exclusive offers, and behind-the-scenes content. Let's build something great together.
@@ -29,8 +29,7 @@
     </div>
 
     <div class="copyRight text-center p-3">
-        © 2024 Copyright:
-        <a class="text-body" href="#">Julian David Camacho Erazo - jdacamacho</a>
+        © 2024 Copyright: Julian David Camacho Erazo - jdacamacho
     </div>
 </footer>
 
