--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,8 @@
-<nz-page-header class="site-page-header" nzTitle="Products Application" nzSubtitle="The best products in the wordl!"></nz-page-header>
+<nav class="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand product-text" href="#">
+        <img src="../../../assets/grow-shop.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        Products
+      </a>
+    </div>
+</nav>
