layout listo, mejorar los colores y funcionalidades para productos

--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -1,4 +1,4 @@
-<ul class="nav flex-column">
+<ul class="nav flex-column p-2">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="#">
         <span nz-icon nzType="home" nzTheme="outline"></span>
