--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,19 +1,16 @@
-<div class="container">
+<div class="container-fluid p-0">
+
   <app-header></app-header>
-  <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="#">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Library</li>
-    </ol>
-  </nav>
-  <div class="container p-4">
+  <app-bread-crumb></app-bread-crumb>
+
+  <div class="container-fluid p-4">
     <div class="row">
-        <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+
+        <div class="col-lg-2 col-md-12 mb-4">
             <app-side-bar></app-side-bar>
         </div>
 
-        <div class="col-lg-10 col-md-12 mb-4 mb-md-0">
-          <nz-content class="content-main">
+        <div class="col-lg-10 col-md-12 mb-4">
             <nz-card style="width: 100%;" nzTitle="Products" [nzExtra]="">
               <nz-card-tab>
                 <nz-tabset nzSize="large" [(nzSelectedIndex)]="index1">
@@ -29,14 +26,14 @@
                       <tr>
                         <th scope="col">Name</th>
                         <th scope="col">Price</th>
-                        <th scope="col">Stock</th>
+                        <th scope="col">See product</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr *ngFor="let product of currentItems">
                         <td>{{ product.name }}</td>
                         <td>{{ product.price | currency }}</td>
-                        <td>{{ product.stock }}</td>
+                        <td> <span nz-icon nzType="eye" nzTheme="outline"> </span></td>
                       </tr>
                     </tbody>
                   </table>
@@ -49,75 +46,9 @@
       
               </div>
             </nz-card>
-          </nz-content>
         </div>
 
     </div>
 </div>
   <app-footer></app-footer>
 </div>
-
-<!--  <nz-layout class="main">
-  
-  <div class="child-header">
-    <app-header></app-header>
-    <div class="breadCrumb">
-      <nz-breadcrumb>
-        <nz-breadcrumb-item></nz-breadcrumb-item>
-        <nz-breadcrumb-item>Home</nz-breadcrumb-item>
-        <nz-breadcrumb-item>Products</nz-breadcrumb-item>
-      </nz-breadcrumb>
-    </div>
-  </div>
-  
-  <nz-layout class="main-products">
-    
-    <nz-sider class="side-bar">
-      <app-side-bar></app-side-bar>
-    </nz-sider>
-
-    <nz-content class="content-main">
-      <nz-card style="width: 100%;" nzTitle="Products" [nzExtra]="">
-        <nz-card-tab>
-          <nz-tabset nzSize="large" [(nzSelectedIndex)]="index1">
-            <nz-tab nzTitle="View 1"></nz-tab>
-            <nz-tab nzTitle="View 2"></nz-tab>
-          </nz-tabset>
-        </nz-card-tab>
-        
-        <div *ngIf="index1 === 0">
-          <div class="container">
-            <table class="table table-bordered table-hover">
-              <thead class="thead-light">
-                <tr>
-                  <th scope="col">Name</th>
-                  <th scope="col">Price</th>
-                  <th scope="col">Stock</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let product of currentItems">
-                  <td>{{ product.name }}</td>
-                  <td>{{ product.price | currency }}</td>
-                  <td>{{ product.stock }}</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <nz-pagination [nzTotal]="totalItems" [nzPageIndex]="currentPage" [nzPageSize]="pageSize" (nzPageIndexChange)="onPageChange($event)"></nz-pagination>
-        </div>
-        <div *ngIf="index1 === 1">
-          
-          <h1>Contenido HTML para View 2</h1>
-
-        </div>
-      </nz-card>
-    </nz-content>
-  </nz-layout>
-
-  <footer>
-    <app-footer></app-footer>
-  </footer>
-
-</nz-layout>
--->
