--- a/src/app/components/side-bar/side-bar.component.css
+++ b/src/app/components/side-bar/side-bar.component.css
@@ -1,4 +1,5 @@
-.side-bar{
-    min-height: 100px;
-    max-height: 400px;
+.nav{
+    background-color: #e3dfff;
+    border-radius: 20px 0px 20px 0px;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
 }
