--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,7 +1,7 @@
 .navbar{
-    background-color: #153960;
+    background-color: #0b2545;
 }
 
 .product-text{
-    color: #88afc4;
+    color: #dcdcdd;
 }
