--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -1,14 +1,4 @@
-.content-main{
-  background-color: white;
-  min-height: 300px;
+.card-products{
+  border-radius: 20px;
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
 }
-
-.main-products{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.side-bar{
-  height: 0px;
-}
-
